--- a/gnu/spack.yaml
+++ b/gnu/spack.yaml
@@ -1,15 +1,16 @@
 spack:
-
   view: false
-
   concretizer:
     unify: false
     reuse: false
-
   packages:
     all:
       target: [x86_64]
-
+      require: '%gcc'
+    mpi:
+      require: mpich
+    mpich:
+      require: ~wrapperrpath
   specs:
   - bacio@2.4.1
   - bison@3.8.2
@@ -70,3 +71,17 @@ spack:
   # - shumlib@macos_clang_linux_intel_port  # add pkg
   # - solo@1.0.0                            # add pkg
   # - yafyaml@0.5.1                         # add pkg
+  compilers:
+  - compiler:
+      spec: gcc@11.1.0
+      paths:
+        cc: /usr/bin/gcc
+        cxx: /usr/bin/g++
+        f77: /usr/bin/gfortran
+        fc: /usr/bin/gfortran
+      flags: {}
+      operating_system: ubuntu20.04
+      target: x86_64
+      modules: []
+      environment: {}
+      extra_rpaths: []
