--- a/nvhpc/spack.yaml
+++ b/nvhpc/spack.yaml
@@ -1,14 +1,10 @@
 spack:
-
   view: false
-
   concretizer:
     unify: false
     reuse: false
-
   packages:
     all:
-      compiler: [nvhpc]
       target: [x86_64]
       require: '%nvhpc'
     git:
@@ -19,7 +15,8 @@ spack:
       require: '%gcc'
     libffi:
       require: '%gcc'
-
+    readline:
+      require: '%gcc'
   specs:
   - bacio@2.4.1
   - bison@3.8.2
@@ -80,3 +77,30 @@ spack:
   # - shumlib@macos_clang_linux_intel_port  # add pkg
   # - solo@1.0.0                            # add pkg
   # - yafyaml@0.5.1                         # add pkg
+  compilers:
+  - compiler:
+      spec: gcc@11.1.0
+      paths:
+        cc: /usr/bin/gcc
+        cxx: /usr/bin/g++
+        f77: /usr/bin/gfortran
+        fc: /usr/bin/gfortran
+      flags: {}
+      operating_system: ubuntu20.04
+      target: x86_64
+      modules: []
+      environment: {}
+      extra_rpaths: []
+  - compiler:
+      spec: nvhpc@22.11
+      paths:
+        cc: /spack/opt/spack/__spack_path_placeholder__/__spack_path_placeholder__/__spack_path_placeholder__/__spack_path_placeholder__/__spack_path_placeholder__/__spack_path_placeholder__/__spack_path_placeholder__/__spack_path_placeholder__/__spack_path_placeholde/linux-ubuntu20.04-x86_64/gcc-11.1.0/nvhpc-22.11-d4gioeteddqskfhdhbl3ririxuwef3ml/Linux_x86_64/22.11/compilers/bin/nvc
+        cxx: /spack/opt/spack/__spack_path_placeholder__/__spack_path_placeholder__/__spack_path_placeholder__/__spack_path_placeholder__/__spack_path_placeholder__/__spack_path_placeholder__/__spack_path_placeholder__/__spack_path_placeholder__/__spack_path_placeholde/linux-ubuntu20.04-x86_64/gcc-11.1.0/nvhpc-22.11-d4gioeteddqskfhdhbl3ririxuwef3ml/Linux_x86_64/22.11/compilers/bin/nvc++
+        f77: /spack/opt/spack/__spack_path_placeholder__/__spack_path_placeholder__/__spack_path_placeholder__/__spack_path_placeholder__/__spack_path_placeholder__/__spack_path_placeholder__/__spack_path_placeholder__/__spack_path_placeholder__/__spack_path_placeholde/linux-ubuntu20.04-x86_64/gcc-11.1.0/nvhpc-22.11-d4gioeteddqskfhdhbl3ririxuwef3ml/Linux_x86_64/22.11/compilers/bin/nvfortran
+        fc: /spack/opt/spack/__spack_path_placeholder__/__spack_path_placeholder__/__spack_path_placeholder__/__spack_path_placeholder__/__spack_path_placeholder__/__spack_path_placeholder__/__spack_path_placeholder__/__spack_path_placeholder__/__spack_path_placeholde/linux-ubuntu20.04-x86_64/gcc-11.1.0/nvhpc-22.11-d4gioeteddqskfhdhbl3ririxuwef3ml/Linux_x86_64/22.11/compilers/bin/nvfortran
+      flags: {}
+      operating_system: ubuntu20.04
+      target: x86_64
+      modules: []
+      environment: {}
+      extra_rpaths: []
