--- a/oneapi/spack.yaml
+++ b/oneapi/spack.yaml
@@ -1,18 +1,63 @@
 spack:
   view: false
+
   concretizer:
     unify: false
     reuse: false
+
   packages:
     all:
       target: [x86_64]
-      require: '%oneapi'
+      require: '%oneapi@2022.2.1'
     mpi:
       require: intel-oneapi-mpi
     autoconf:
       require: '%gcc'
     m4:
       require: '%gcc'
+
+  compilers:
+  - compiler:
+      spec: dpcpp@2022.2.1
+      paths:
+        cc: /opt/intel/oneapi/compiler/2022.2.1/linux/bin/icx
+        cxx: /opt/intel/oneapi/compiler/2022.2.1/linux/bin/dpcpp
+        f77: /opt/intel/oneapi/compiler/2022.2.1/linux/bin/ifx
+        fc: /opt/intel/oneapi/compiler/2022.2.1/linux/bin/ifx
+      flags: {}
+      operating_system: ubuntu20.04
+      target: x86_64
+      modules: [compiler]
+      environment: {}
+      extra_rpaths: []
+  - compiler:
+      spec: gcc@11.1.0
+      paths:
+        cc: /usr/bin/gcc
+        cxx: /usr/bin/g++
+        f77: /usr/bin/gfortran
+        fc: /usr/bin/gfortran
+      flags: {}
+      operating_system: ubuntu20.04
+      target: x86_64
+      modules: []
+      environment: {}
+      extra_rpaths: []
+  - compiler:
+      spec: oneapi@2022.2.1
+      paths:
+        cc: /opt/intel/oneapi/compiler/2022.2.1/linux/bin/icx
+        cxx: /opt/intel/oneapi/compiler/2022.2.1/linux/bin/icpx
+        f77: /opt/intel/oneapi/compiler/2022.2.1/linux/bin/ifx
+        fc: /opt/intel/oneapi/compiler/2022.2.1/linux/bin/ifx
+      flags: {}
+      operating_system: ubuntu20.04
+      target: x86_64
+      modules: [compiler]
+      environment: {}
+      extra_rpaths: []
+
+
   specs:
   - bacio@2.4.1
   - bison@3.8.2
@@ -73,43 +118,3 @@ spack:
   # - shumlib@macos_clang_linux_intel_port  # add pkg
   # - solo@1.0.0                            # add pkg
   # - yafyaml@0.5.1                         # add pkg
-  compilers:
-  - compiler:
-      spec: dpcpp@2022.2.1
-      paths:
-        cc: /opt/intel/oneapi/compiler/2022.2.1/linux/bin/icx
-        cxx: /opt/intel/oneapi/compiler/2022.2.1/linux/bin/dpcpp
-        f77: /opt/intel/oneapi/compiler/2022.2.1/linux/bin/ifx
-        fc: /opt/intel/oneapi/compiler/2022.2.1/linux/bin/ifx
-      flags: {}
-      operating_system: ubuntu20.04
-      target: x86_64
-      modules: [compiler]
-      environment: {}
-      extra_rpaths: []
-  - compiler:
-      spec: gcc@11.1.0
-      paths:
-        cc: /usr/bin/gcc
-        cxx: /usr/bin/g++
-        f77: /usr/bin/gfortran
-        fc: /usr/bin/gfortran
-      flags: {}
-      operating_system: ubuntu20.04
-      target: x86_64
-      modules: []
-      environment: {}
-      extra_rpaths: []
-  - compiler:
-      spec: oneapi@2022.2.1
-      paths:
-        cc: /opt/intel/oneapi/compiler/2022.2.1/linux/bin/icx
-        cxx: /opt/intel/oneapi/compiler/2022.2.1/linux/bin/icpx
-        f77: /opt/intel/oneapi/compiler/2022.2.1/linux/bin/ifx
-        fc: /opt/intel/oneapi/compiler/2022.2.1/linux/bin/ifx
-      flags: {}
-      operating_system: ubuntu20.04
-      target: x86_64
-      modules: [compiler]
-      environment: {}
-      extra_rpaths: []
