--- a/gnu/spack.yaml
+++ b/gnu/spack.yaml
@@ -61,11 +61,11 @@ spack:
   - py-shapely@1.8.0
   - sp@2.3.3
   - udunits@2.2.28
-  - zlib@1.2.12
+  - zlib@1.2.12                             # deprecated version
 
   # ERRORS
-  # - w3nco@2.4.1           # w3nco
-  # - parallelio@2.5.4      # parallelio
+  # - parallelio@2.5.4                      # parallelio
+  # - w3nco@2.4.1                           # w3nco
   # ---
   # parallelio: patching failed: 1 out of 2 hunks FAILED -- saving rejects to file CMakeLists.txt.rej
   # w3nco: Please submit a full bug report, with preprocessed source if appropriate. Please include the complete backtrace with any bug report.
