--- a/oneapi/spack.yaml
+++ b/oneapi/spack.yaml
@@ -15,6 +15,8 @@ spack:
       require: '%gcc'
     m4:
       require: '%gcc'
+    krb5:
+      require: '%gcc'
 
   compilers:
   - compiler:
@@ -64,7 +66,6 @@ spack:
   - ecbuild@3.6.5
   - eccodes@2.25.0
   - eigen@3.4.0
-  - esmf@8.3.0b09 +pio
   - flex@2.6.4
   - fms@2022.01
   - fms@2022.03
@@ -85,13 +86,21 @@ spack:
   - parallel-netcdf@1.12.2
   - parallelio@2.5.4
   - py-numpy@1.22.3
-  - py-pandas@1.4.0
-  - py-scipy@1.8.0
   - py-shapely@1.8.0
   - sp@2.3.3
   - udunits@2.2.28
-  - w3nco@2.4.1
-  - zlib@1.2.12                             # deprecated version
+  - zlib@1.2.12                               # deprecated version
+
+  # ERRORS
+  # - esmf@8.3.0b09 +pio                      # esmf
+  # - py-pandas@1.4.0                         # py-setuptools-scm
+  # - py-scipy@1.8.0                          # py-scipy
+  # - w3nco@2.4.1                             # w3nco
+  # --
+  # esmf: patch failed: 1 out of 1 hunk FAILED -- saving rejects to file src/Infrastructure/Mesh/src/Legacy/ESMCI_MeshPNC.C.rej, ESMCI_WriteWeightsPar.C.rej
+  # py-scipy: icx: error: unknown argument: '-mavx5124vnniw'
+  # py-setuptools-scm: error: metadata-generation-failed
+  # w3nco: error: call to undeclared function 'times'; ISO C99 and later do not support implicit function declarations [-Wimplicit-function-declaration]
 
   # NEED TO ADD VERSION
   # - bufr@11.7.0                           # add version
