--- a/oneapi/spack.yaml
+++ b/oneapi/spack.yaml
@@ -93,12 +93,14 @@ spack:
 
   # ERRORS
   # - esmf@8.3.0b09 +pio                      # esmf
+  # - gftl-shared@1.5.0                       # gtfl-shared
   # - hdf@4.2.15                              # krb5
   # - py-pandas@1.4.0                         # py-setuptools-scm
   # - py-scipy@1.8.0                          # py-scipy
   # - w3nco@2.4.1                             # w3nco
   # --
   # esmf: patch failed: 1 out of 1 hunk FAILED -- saving rejects to file src/Infrastructure/Mesh/src/Legacy/ESMCI_MeshPNC.C.rej, ESMCI_WriteWeightsPar.C.rej
+  # gtfl-shared: CMake Error at CMakeLists.txt:35 (include): include could not find requested file: IntelLLVM
   # krb5: getdate.y:192:13: error: 'yyYear' undeclared (first use in this function); did you mean 'yychar'?
   # krb5: many more Werror=...
   # krb5: y.tab.c:1103:16: warning: implicit declaration of function 'yylex' [-Wimplicit-function-declaration]
@@ -117,15 +119,14 @@ spack:
   # - odc@1.4.5                             # add version: https://github.com/spack/spack/pull/34513
 
   # NEED TO ADD PACKAGE
-  # - ecmwf-atlas@0.29.0                    # add pkg
-  # - ectrans@1.0.0                         # add pkg
-  # - ewok@0.0.1                            # add pkg
-  # - fckit@0.9.5                           # add pkg
-  # - fiat@1.0.0                            # add pkg
-  # - gftl-shared@1.5.0                     # add pkg
-  # - jedi-cmake@1.3.0                      # add pkg
-  # - mapl@2.22.0                           # add pkg
-  # - r2d2@0.0.1                            # add pkg
-  # - shumlib@macos_clang_linux_intel_port  # add pkg
-  # - solo@1.0.0                            # add pkg
-  # - yafyaml@0.5.1                         # add pkg
+  # - ecmwf-atlas@0.29.0                    # add pkg: https://github.com/noaa-emc/spack/ (jcsda_emc_spack_stack branch)
+  # - ectrans@1.0.0                         # add pkg: https://github.com/noaa-emc/spack/ (jcsda_emc_spack_stack branch)
+  # - ewok@0.0.1                            # add pkg: https://github.com/noaa-emc/spack/ (jcsda_emc_spack_stack branch)
+  # - fckit@0.9.5                           # add pkg: https://github.com/noaa-emc/spack/ (jcsda_emc_spack_stack branch)
+  # - fiat@1.0.0                            # add pkg: https://github.com/noaa-emc/spack/ (jcsda_emc_spack_stack branch)
+  # - jedi-cmake@1.3.0                      # add pkg: https://github.com/noaa-emc/spack/ (jcsda_emc_spack_stack branch)
+  # - mapl@2.22.0                           # add pkg: https://github.com/noaa-emc/spack/ (jcsda_emc_spack_stack branch)
+  # - r2d2@0.0.1                            # add pkg: https://github.com/noaa-emc/spack/ (jcsda_emc_spack_stack branch)
+  # - shumlib@macos_clang_linux_intel_port  # add pkg: https://github.com/noaa-emc/spack/ (jcsda_emc_spack_stack branch)
+  # - solo@1.0.0                            # add pkg: https://github.com/noaa-emc/spack/ (jcsda_emc_spack_stack branch)
+  # - yafyaml@0.5.1                         # add pkg: https://github.com/noaa-emc/spack/ (jcsda_emc_spack_stack branch)
