--- a/gnu/spack.yaml
+++ b/gnu/spack.yaml
@@ -35,6 +35,7 @@ spack:
   - crtm@2.3.0
   - ecbuild@3.6.5
   - eccodes@2.25.0
+  - ecflow@5.8.3
   - eigen@3.4.0
   - esmf@8.3.0b09 +pio
   - flex@2.6.4
@@ -43,6 +44,7 @@ spack:
   - fms@2022.04
   - g2@3.4.5
   - g2tmpl@1.10.0
+  - gftl-shared@1.5.0
   - hdf@4.2.15
   - hdf5@1.12.1
   - ip@3.3.3
@@ -71,26 +73,24 @@ spack:
   # w3nco: Please submit a full bug report, with preprocessed source if appropriate. Please include the complete backtrace with any bug report.
 
   # NEED TO ADD VERSION
-  # - bufr@11.7.0                           # add version
-  # - crtm@v2.3-jedi.4                      # add version
-  # - ecflow@5                              # add version
-  # - eckit@1.19.0                          # add version
-  # - fms@2019.01.03                        # add version
-  # - fms@release-jcsda                     # add version
-  # - nco@5.0.6                             # add version
-  # - netcdf-cxx4@4.3.1                     # add version
-  # - odc@1.4.5                             # add version
+  # - bufr@11.7.0                           # add version: https://github.com/spack/spack/pull/34509
+  # - crtm@v2.3-jedi.4                      # add version: private?
+  # - eckit@1.19.0                          # add version: https://github.com/spack/spack/pull/34510
+  # - fms@2019.01.03                        # add version: https://github.com/spack/spack/pull/34511
+  # - fms@release-jcsda                     # add version: private?
+  # - nco@5.0.6                             # add version: https://github.com/spack/spack/pull/34512
+  # - netcdf-cxx@4.3.1                      # add version: deprecated? use new package?
+  # - odc@1.4.5                             # add version: https://github.com/spack/spack/pull/34513
 
   # NEED TO ADD PACKAGE
-  # - ecmwf-atlas@0.29.0                    # add pkg
-  # - ectrans@1.0.0                         # add pkg
-  # - ewok@0.0.1                            # add pkg
-  # - fckit@0.9.5                           # add pkg
-  # - fiat@1.0.0                            # add pkg
-  # - gftl-shared@1.5.0                     # add pkg
-  # - jedi-cmake@1.3.0                      # add pkg
-  # - mapl@2.22.0                           # add pkg
-  # - r2d2@0.0.1                            # add pkg
-  # - shumlib@macos_clang_linux_intel_port  # add pkg
-  # - solo@1.0.0                            # add pkg
-  # - yafyaml@0.5.1                         # add pkg
+  # - ecmwf-atlas@0.29.0                    # add pkg: https://github.com/noaa-emc/spack/ (jcsda_emc_spack_stack branch)
+  # - ectrans@1.0.0                         # add pkg: https://github.com/noaa-emc/spack/ (jcsda_emc_spack_stack branch)
+  # - ewok@0.0.1                            # add pkg: https://github.com/noaa-emc/spack/ (jcsda_emc_spack_stack branch)
+  # - fckit@0.9.5                           # add pkg: https://github.com/noaa-emc/spack/ (jcsda_emc_spack_stack branch)
+  # - fiat@1.0.0                            # add pkg: https://github.com/noaa-emc/spack/ (jcsda_emc_spack_stack branch)
+  # - jedi-cmake@1.3.0                      # add pkg: https://github.com/noaa-emc/spack/ (jcsda_emc_spack_stack branch)
+  # - mapl@2.22.0                           # add pkg: https://github.com/noaa-emc/spack/ (jcsda_emc_spack_stack branch)
+  # - r2d2@0.0.1                            # add pkg: https://github.com/noaa-emc/spack/ (jcsda_emc_spack_stack branch)
+  # - shumlib@macos_clang_linux_intel_port  # add pkg: https://github.com/noaa-emc/spack/ (jcsda_emc_spack_stack branch)
+  # - solo@1.0.0                            # add pkg: https://github.com/noaa-emc/spack/ (jcsda_emc_spack_stack branch)
+  # - yafyaml@0.5.1                         # add pkg: https://github.com/noaa-emc/spack/ (jcsda_emc_spack_stack branch)
