--- a/nvhpc/spack.yaml
+++ b/nvhpc/spack.yaml
@@ -9,21 +9,23 @@ spack:
     all:
       target: [x86_64]
       require: '%nvhpc@22.11'
-    git:
+    cmake:
       require: '%gcc'
-    python:
+    git:
       require: '%gcc'
     jasper:
       require: '%gcc'
     libffi:
       require: '%gcc'
+    libxcrypt:
+      require: '%gcc'
+    py-cython:
+      require: '%gcc'
+    python:
+      require: '%gcc'
     readline:
       require: '%gcc'
     xz:
-      require: '%gcc'
-    cmake:
-      require: '%gcc'
-    libxcrypt:
       require: '%gcc'
 
   compilers:
@@ -57,16 +59,12 @@ spack:
   specs:
   - bacio@2.4.1
   - bison@3.8.2
-  - crtm@2.3.0
   - ecbuild@3.6.5
   - eccodes@2.25.0
   - ecflow@5.8.3
   - eigen@3.4.0
   - esmf@8.3.0b09 +pio
   - flex@2.6.4
-  - fms@2022.01
-  - fms@2022.03
-  - fms@2022.04
   - g2@3.4.5
   - g2tmpl@1.10.0
   - gftl-shared@1.5.0                       # gtfl-shared
@@ -85,12 +83,23 @@ spack:
   - parallelio@2.5.4
   - py-numpy@1.22.3
   - py-pandas@1.4.0
-  - py-scipy@1.8.0
   - py-shapely@1.8.0
   - sp@2.3.3
   - udunits@2.2.28
   - w3nco@2.4.1
   - zlib@1.2.12                             # deprecated version
+
+  # ERRORS
+  # - crtm@2.3.0                            # crtm
+  # - fms@2022.01                           # fms
+  # - fms@2022.03                           # fms
+  # - fms@2022.04                           # fms
+  # - py-scipy@1.8.0                        # re2c
+  
+  # --
+  # crtm: NVFORTRAN-F-0004-Unable to open MODULE file iso_fortran_env.mod
+  # fms: NVFORTRAN-S-0155-Same name common blocks with different sizes in same file not supported  (fms2_io/netcdf_io.F90)
+  # re2c: src/dfa/closure_posix.h", line 83: error: no instance of function template "re2c::init_gor1" matches the argument list
 
   # NEED TO ADD VERSION
   # - bufr@11.7.0                           # add version: https://github.com/spack/spack/pull/34509
