--- a/nvhpc/spack.yaml
+++ b/nvhpc/spack.yaml
@@ -67,7 +67,6 @@ spack:
   - flex@2.6.4
   - g2@3.4.5
   - g2tmpl@1.10.0
-  - gftl-shared@1.5.0                       # gtfl-shared
   - hdf@4.2.15
   - hdf5@1.12.1
   - ip@3.3.3
@@ -83,7 +82,6 @@ spack:
   - parallelio@2.5.4
   - py-numpy@1.22.3
   - py-pandas@1.4.0
-  - py-shapely@1.8.0
   - sp@2.3.3
   - udunits@2.2.28
   - w3nco@2.4.1
@@ -95,10 +93,12 @@ spack:
   # - fms@2022.03                           # fms
   # - fms@2022.04                           # fms
   # - py-scipy@1.8.0                        # re2c
-  
+  # - py-shapely@1.8.0                      # re2c
+  # - gftl-shared@1.5.0                     # gtfl-shared
   # --
   # crtm: NVFORTRAN-F-0004-Unable to open MODULE file iso_fortran_env.mod
   # fms: NVFORTRAN-S-0155-Same name common blocks with different sizes in same file not supported  (fms2_io/netcdf_io.F90)
+  # gtfl-shared: CMake Error at cmake/fortran_try.cmake:13 (string): string sub-command STRIP requires two arguments.cmake/check_intrinsic_kinds.cmake:16 (CHECK_Fortran_SOURCE_RUN)
   # re2c: src/dfa/closure_posix.h", line 83: error: no instance of function template "re2c::init_gor1" matches the argument list
 
   # NEED TO ADD VERSION
