--- a/clang/spack.yaml
+++ b/clang/spack.yaml
@@ -37,7 +37,6 @@ spack:
   - eccodes@2.25.0
   - ecflow@5.8.3
   - eigen@3.4.0
-  - esmf@8.3.0b09 +pio
   - flex@2.6.4
   - fms@2022.01
   - fms@2022.03
@@ -65,22 +64,26 @@ spack:
   - udunits@2.2.28
   - zlib@1.2.12                             # deprecated version
 
+  # NEW PR
+  - bufr@11.7.0
+  - eckit@1.19.0
+  - fms@2019.01.03
+  - odc@1.4.5
+  - parallelio@2.5.4                      # parallelio
+  - w3nco@2.4.1                           # w3nco
+
   # ERRORS
-  # - parallelio@2.5.4                      # parallelio
-  # - w3nco@2.4.1                           # w3nco
+  # - esmf@8.3.0b09 +pio                    # esmf
   # ---
+  # esmf: Infrastructure/Mesh/src/Legacy/ESMCI_MeshPNC.C:125:45: error: non-constant-expression cannot be narrowed from type 'long' to 'int' in initializer list [-Wc++11-narrowing]
   # parallelio: patching failed: 1 out of 2 hunks FAILED -- saving rejects to file CMakeLists.txt.rej
   # w3nco: Please submit a full bug report, with preprocessed source if appropriate. Please include the complete backtrace with any bug report.
 
   # NEED TO ADD VERSION
-  # - bufr@11.7.0                           # add version: https://github.com/spack/spack/pull/34509
   # - crtm@v2.3-jedi.4                      # add version: private?
-  # - eckit@1.19.0                          # add version: https://github.com/spack/spack/pull/34510
-  # - fms@2019.01.03                        # add version: https://github.com/spack/spack/pull/34511
   # - fms@release-jcsda                     # add version: private?
   # - nco@5.0.6                             # add version: https://github.com/spack/spack/pull/34512
   # - netcdf-cxx@4.3.1                      # add version: deprecated? use new package?
-  # - odc@1.4.5                             # add version: https://github.com/spack/spack/pull/34513
 
   # NEED TO ADD PACKAGE
   # - ecmwf-atlas@0.29.0                    # add pkg: https://github.com/noaa-emc/spack/ (jcsda_emc_spack_stack branch)
