--- a/clang/spack.yaml
+++ b/clang/spack.yaml
@@ -1,19 +1,16 @@
 spack:
   view: false
-
   concretizer:
     unify: false
     reuse: false
-
   packages:
     all:
       target: [x86_64]
-      require: '%gcc@11.1.0'
+      require: '%clang@15.0.6'
     mpi:
       require: mpich
     mpich:
       require: ~wrapperrpath
-
   compilers:
   - compiler:
       spec: gcc@11.1.0
@@ -28,7 +25,19 @@ spack:
       modules: []
       environment: {}
       extra_rpaths: []
-
+  - compiler:
+      spec: clang@15.0.6
+      paths:
+        cc: /spack/opt/spack/__spack_path_placeholder__/__spack_path_placeholder__/__spack_path_placeholder__/__spack_path_placeholder__/__spack_path_placeholder__/__spack_path_placeholder__/__spack_path_placeholder__/__spack_path_placeholder__/__spack_path_placeholde/linux-ubuntu20.04-x86_64/gcc-11.1.0/llvm-15.0.6-yo3ejan3zqj4nrhkxiunn7ia3nqdispg/bin/clang
+        cxx: /spack/opt/spack/__spack_path_placeholder__/__spack_path_placeholder__/__spack_path_placeholder__/__spack_path_placeholder__/__spack_path_placeholder__/__spack_path_placeholder__/__spack_path_placeholder__/__spack_path_placeholder__/__spack_path_placeholde/linux-ubuntu20.04-x86_64/gcc-11.1.0/llvm-15.0.6-yo3ejan3zqj4nrhkxiunn7ia3nqdispg/bin/clang++
+        f77: null
+        fc: null
+      flags: {}
+      operating_system: ubuntu20.04
+      target: x86_64
+      modules: []
+      environment: {}
+      extra_rpaths: []
   specs:
   - bacio@2.4.1
   - bison@3.8.2
@@ -64,6 +73,7 @@ spack:
   - udunits@2.2.28
   - zlib@1.2.12                             # deprecated version
 
+  
   # NEW PR
   - bufr@11.7.0
   - eckit@1.19.0
